@@ -1127,3 +1127,4 @@
 ( cvs diff -u -r 1.61.2.40 -r 1.61.2.41 src/account.c;  cvs diff -u -r 1.8.2.15 -r 1.8.2.16 src/export.c;  cvs diff -u -r 1.13.2.14 -r 1.13.2.15 src/import.c;  cvs diff -u -r 1.274.2.86 -r 1.274.2.87 src/mainwindow.c;  cvs diff -u -r 1.105.2.45 -r 1.105.2.46 src/prefs_account.c;  cvs diff -u -r 1.16.2.15 -r 1.16.2.16 src/prefs_display_header.c;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/prefs_receive.c;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/prefs_send.c;  cvs diff -u -r 1.1.2.16 -r 1.1.2.17 src/prefs_summaries.c;  cvs diff -u -r 1.3.2.34 -r 1.3.2.35 src/prefs_themes.c;  cvs diff -u -r 1.30.2.21 -r 1.30.2.22 src/prefs_toolbar.c;  cvs diff -u -r 1.4.2.27 -r 1.4.2.28 src/gtk/about.c;  ) > 1.9.100cvs141.patchset
 ( cvs diff -u -r 1.61.2.41 -r 1.61.2.42 src/account.c;  cvs diff -u -r 1.11.2.3 -r 1.11.2.4 src/account.h;  cvs diff -u -r 1.12.2.28 -r 1.12.2.29 src/action.c;  cvs diff -u -r 1.3.2.4 -r 1.3.2.5 src/action.h;  cvs diff -u -r 1.1.14.1 -r 1.1.14.2 src/adbookbase.h;  cvs diff -u -r 1.27.2.15 -r 1.27.2.16 src/addr_compl.c;  cvs diff -u -r 1.8.2.3 -r 1.8.2.4 src/addr_compl.h;  cvs diff -u -r 1.22.2.6 -r 1.22.2.7 src/addrbook.c;  cvs diff -u -r 1.15.2.6 -r 1.15.2.7 src/addrcache.c;  cvs diff -u -r 1.9.2.2 -r 1.9.2.3 src/addrcache.h;  cvs diff -u -r 1.1.4.1 -r 1.1.4.2 src/addrcindex.c;  cvs diff -u -r 1.1.4.1 -r 1.1.4.2 src/addrcindex.h;  cvs diff -u -r 1.5.2.1 -r 1.5.2.2 src/addrclip.c;  cvs diff -u -r 1.1.14.1 -r 1.1.14.2 src/addrclip.h;  cvs diff -u -r 1.1.4.2 -r 1.1.4.3 src/addrdefs.h;  cvs diff -u -r 1.9.2.6 -r 1.9.2.7 src/addressadd.c;  cvs diff -u -r 1.2.16.1 -r 1.2.16.2 src/addressadd.h;  cvs diff -u -r 1.60.2.41 -r 1.60.2.42 src/addressbook.c;  cvs diff -u -r 1.18.2.1 -r 1.18.2.2 src/addressbook.h;  cvs diff -u -r 1.5.10.11 -r 1.5.10.12 src/addrgather.c;  cvs diff -u -r 1.3.12.1 -r 1.3.12.2 src/addrgather.h;  cvs diff -u -r 1.6.10.9 -r 1.6.10.10 src/addrharvest.c;  cvs diff -u -r 1.4.12.1 -r 1.4.12.2 src/addrharvest.h;  cvs diff -u -r 1.28.2.13 -r 1.28.2.14 src/addrindex.c;  cvs diff -u -r 1.9.2.5 -r 1.9.2.6 src/addrindex.h;  cvs diff -u -r 1.13.2.4 -r 1.13.2.5 src/addritem.c;  cvs diff -u -r 1.12.2.3 -r 1.12.2.4 src/addritem.h;  cvs diff -u -r 1.1.4.2 -r 1.1.4.3 src/addrquery.c;  cvs diff -u -r 1.3.2.2 -r 1.3.2.3 src/addrquery.h;  cvs diff -u -r 1.3.2.2 -r 1.3.2.3 src/addrselect.c;  cvs diff -u -r 1.1.14.2 -r 1.1.14.3 src/addrselect.h;  cvs diff -u -r 1.17.2.19 -r 1.17.2.20 src/alertpanel.c;  cvs diff -u -r 1.5.2.6 -r 1.5.2.7 src/alertpanel.h;  cvs diff -u -r 1.2.4.11 -r 1.2.4.12 src/browseldap.c;  cvs diff -u -r 1.2.4.2 -r 1.2.4.3 src/browseldap.h;  cvs diff -u -r 1.65.2.45 -r 1.65.2.46 src/codeconv.c;  cvs diff -u -r 1.15.2.14 -r 1.15.2.15 src/codeconv.h;  cvs diff -u -r 1.382.2.219 -r 1.382.2.220 src/compose.c;  cvs diff -u -r 1.50.2.18 -r 1.50.2.19 src/compose.h;  cvs diff -u -r 1.5.2.5 -r 1.5.2.6 src/customheader.c;  cvs diff -u -r 1.2.16.2 -r 1.2.16.3 src/customheader.h;  cvs diff -u -r 1.2.16.1 -r 1.2.16.2 src/displayheader.c;  cvs diff -u -r 1.2.16.1 -r 1.2.16.2 src/displayheader.h;  cvs diff -u -r 1.14.2.12 -r 1.14.2.13 src/editaddress.c;  cvs diff -u -r 1.3.2.1 -r 1.3.2.2 src/editaddress.h;  cvs diff -u -r 1.5.12.4 -r 1.5.12.5 src/editbook.c;  cvs diff -u -r 1.2.16.1 -r 1.2.16.2 src/editbook.h;  cvs diff -u -r 1.11.2.8 -r 1.11.2.9 src/editgroup.c;  cvs diff -u -r 1.3.2.1 -r 1.3.2.2 src/editgroup.h;  cvs diff -u -r 1.5.12.7 -r 1.5.12.8 src/editjpilot.c;  cvs diff -u -r 1.3.16.1 -r 1.3.16.2 src/editjpilot.h;  cvs diff -u -r 1.8.2.9 -r 1.8.2.10 src/editldap.c;  cvs diff -u -r 1.4.2.1 -r 1.4.2.2 src/editldap.h;  cvs diff -u -r 1.10.2.5 -r 1.10.2.6 src/editldap_basedn.c;  cvs diff -u -r 1.3.2.1 -r 1.3.2.2 src/editldap_basedn.h;  cvs diff -u -r 1.5.12.6 -r 1.5.12.7 src/editvcard.c;  cvs diff -u -r 1.3.16.1 -r 1.3.16.2 src/editvcard.h;  cvs diff -u -r 1.3.2.13 -r 1.3.2.14 src/exphtmldlg.c;  cvs diff -u -r 1.2.2.1 -r 1.2.2.2 src/exphtmldlg.h;  cvs diff -u -r 1.1.4.15 -r 1.1.4.16 src/expldifdlg.c;  cvs diff -u -r 1.1.4.2 -r 1.1.4.3 src/expldifdlg.h;  cvs diff -u -r 1.1.16.1 -r 1.1.16.2 src/export.h;  cvs diff -u -r 1.5.2.9 -r 1.5.2.10 src/exporthtml.c;  cvs diff -u -r 1.1.14.1 -r 1.1.14.2 src/exporthtml.h;  cvs diff -u -r 1.1.4.8 -r 1.1.4.9 src/exportldif.c;  cvs diff -u -r 1.1.4.1 -r 1.1.4.2 src/exportldif.h;  cvs diff -u -r 1.60.2.8 -r 1.60.2.9 src/filtering.c;  cvs diff -u -r 1.21.2.3 -r 1.21.2.4 src/filtering.h;  cvs diff -u -r 1.213.2.73 -r 1.213.2.74 src/folder.c;  cvs diff -u -r 1.87.2.23 -r 1.87.2.24 src/folder.h;  cvs diff -u -r 1.2.2.10 -r 1.2.2.11 src/folder_item_prefs.c;  cvs diff -u -r 1.2.2.3 -r 1.2.2.4 src/folder_item_prefs.h;  cvs diff -u -r 1.26.2.22 -r 1.26.2.23 src/foldersel.c;  cvs diff -u -r 1.4.12.1 -r 1.4.12.2 src/foldersel.h;  cvs diff -u -r 1.3.2.8 -r 1.3.2.9 src/folderutils.c;  cvs diff -u -r 1.1.4.3 -r 1.1.4.4 src/folderutils.h;  cvs diff -u -r 1.207.2.81 -r 1.207.2.82 src/folderview.c;  cvs diff -u -r 1.20.2.9 -r 1.20.2.10 src/folderview.h;  cvs diff -u -r 1.14.2.13 -r 1.14.2.14 src/grouplistdialog.c;  cvs diff -u -r 1.3.14.1 -r 1.3.14.2 src/grouplistdialog.h;  cvs diff -u -r 1.8.2.12 -r 1.8.2.13 src/headerview.c;  cvs diff -u -r 1.12.2.11 -r 1.12.2.12 src/html.c;  cvs diff -u -r 1.3.2.3 -r 1.3.2.4 src/html.h;  cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/image_viewer.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/image_viewer.h;  cvs diff -u -r 1.179.2.88 -r 1.179.2.89 src/imap.c;  cvs diff -u -r 1.34.2.3 -r 1.34.2.4 src/imap.h;  cvs diff -u -r 1.1.2.25 -r 1.1.2.26 src/imap_gtk.c;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/imap_gtk.h;  cvs diff -u -r 1.2.16.1 -r 1.2.16.2 src/import.h;  cvs diff -u -r 1.14.2.8 -r 1.14.2.9 src/importldif.c;  cvs diff -u -r 1.4.2.1 -r 1.4.2.2 src/importldif.h;  cvs diff -u -r 1.4.12.9 -r 1.4.12.10 src/importmutt.c;  cvs diff -u -r 1.2.12.1 -r 1.2.12.2 src/importmutt.h;  cvs diff -u -r 1.1.14.9 -r 1.1.14.10 src/importpine.c;  cvs diff -u -r 1.1.14.1 -r 1.1.14.2 src/importpine.h;  cvs diff -u -r 1.149.2.39 -r 1.149.2.40 src/inc.c;  cvs diff -u -r 1.29.2.7 -r 1.29.2.8 src/inc.h;  cvs diff -u -r 1.18.2.14 -r 1.18.2.15 src/jpilot.c;  cvs diff -u -r 1.10.2.1 -r 1.10.2.2 src/jpilot.h;  cvs diff -u -r 1.2.2.3 -r 1.2.2.4 src/ldapctrl.c;  cvs diff -u -r 1.1.4.3 -r 1.1.4.4 src/ldapctrl.h;  cvs diff -u -r 1.1.4.3 -r 1.1.4.4 src/ldaplocate.c;  cvs diff -u -r 1.1.4.2 -r 1.1.4.3 src/ldaplocate.h;  cvs diff -u -r 1.3.2.6 -r 1.3.2.7 src/ldapquery.c;  cvs diff -u -r 1.4.2.4 -r 1.4.2.5 src/ldapquery.h;  cvs diff -u -r 1.4.2.5 -r 1.4.2.6 src/ldapserver.c;  cvs diff -u -r 1.2.2.4 -r 1.2.2.5 src/ldapserver.h;  cvs diff -u -r 1.1.4.1 -r 1.1.4.2 src/ldaputil.c;  cvs diff -u -r 1.1.4.1 -r 1.1.4.2 src/ldaputil.h;  cvs diff -u -r 1.12.2.6 -r 1.12.2.7 src/ldif.c;  cvs diff -u -r 1.5.2.1 -r 1.5.2.2 src/ldif.h;  cvs diff -u -r 1.115.2.71 -r 1.115.2.72 src/main.c;  cvs diff -u -r 1.7.2.2 -r 1.7.2.3 src/main.h;  cvs diff -u -r 1.274.2.87 -r 1.274.2.88 src/mainwindow.c;  cvs diff -u -r 1.39.2.11 -r 1.39.2.12 src/mainwindow.h;  cvs diff -u -r 1.11.2.6 -r 1.11.2.7 src/manual.c;  cvs diff -u -r 1.8.2.2 -r 1.8.2.3 src/manual.h;  cvs diff -u -r 1.28.2.11 -r 1.28.2.12 src/mbox.c;  cvs diff -u -r 1.3.2.5 -r 1.3.2.6 src/mbox.h;  cvs diff -u -r 1.3.12.11 -r 1.3.12.12 src/message_search.c;  cvs diff -u -r 1.1.16.1 -r 1.1.16.2 src/message_search.h;  cvs diff -u -r 1.94.2.73 -r 1.94.2.74 src/messageview.c;  cvs diff -u -r 1.19.2.5 -r 1.19.2.6 src/messageview.h;  cvs diff -u -r 1.79.2.22 -r 1.79.2.23 src/mh.c;  cvs diff -u -r 1.9.2.2 -r 1.9.2.3 src/mh.h;  cvs diff -u -r 1.2.2.15 -r 1.2.2.16 src/mh_gtk.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/mh_gtk.h;  cvs diff -u -r 1.83.2.56 -r 1.83.2.57 src/mimeview.c;  cvs diff -u -r 1.20.2.6 -r 1.20.2.7 src/mimeview.h;  cvs diff -u -r 1.16.2.28 -r 1.16.2.29 src/msgcache.c;  cvs diff -u -r 1.5.2.2 -r 1.5.2.3 src/msgcache.h;  cvs diff -u -r 1.6.10.6 -r 1.6.10.7 src/mutt.c;  cvs diff -u -r 1.3.12.1 -r 1.3.12.2 src/mutt.h;  cvs diff -u -r 1.101.2.19 -r 1.101.2.20 src/news.c;  cvs diff -u -r 1.21.2.2 -r 1.21.2.3 src/news.h;  cvs diff -u -r 1.2.2.12 -r 1.2.2.13 src/news_gtk.c;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/news_gtk.h;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/partial_download.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/partial_download.h;  cvs diff -u -r 1.6.2.5 -r 1.6.2.6 src/pine.c;  cvs diff -u -r 1.1.14.1 -r 1.1.14.2 src/pine.h;  cvs diff -u -r 1.56.2.41 -r 1.56.2.42 src/pop.c;  cvs diff -u -r 1.17.2.15 -r 1.17.2.16 src/pop.h;  cvs diff -u -r 1.105.2.46 -r 1.105.2.47 src/prefs_account.c;  cvs diff -u -r 1.49.2.17 -r 1.49.2.18 src/prefs_account.h;  cvs diff -u -r 1.60.2.28 -r 1.60.2.29 src/prefs_actions.c;  cvs diff -u -r 1.5.2.1 -r 1.5.2.2 src/prefs_actions.h;  cvs diff -u -r 1.204.2.72 -r 1.204.2.73 src/prefs_common.c;  cvs diff -u -r 1.103.2.39 -r 1.103.2.40 src/prefs_common.h;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/prefs_compose_writing.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/prefs_compose_writing.h;  cvs diff -u -r 1.16.2.15 -r 1.16.2.16 src/prefs_customheader.c;  cvs diff -u -r 1.2.16.1 -r 1.2.16.2 src/prefs_customheader.h;  cvs diff -u -r 1.16.2.16 -r 1.16.2.17 src/prefs_display_header.c;  cvs diff -u -r 1.1.16.1 -r 1.1.16.2 src/prefs_display_header.h;  cvs diff -u -r 1.59.2.28 -r 1.59.2.29 src/prefs_filtering.c;  cvs diff -u -r 1.6.2.2 -r 1.6.2.3 src/prefs_filtering.h;  cvs diff -u -r 1.1.4.21 -r 1.1.4.22 src/prefs_filtering_action.c;  cvs diff -u -r 1.1.4.1 -r 1.1.4.2 src/prefs_filtering_action.h;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/prefs_folder_column.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/prefs_folder_column.h;  cvs diff -u -r 1.52.2.17 -r 1.52.2.18 src/prefs_folder_item.c;  cvs diff -u -r 1.17.2.1 -r 1.17.2.2 src/prefs_folder_item.h;  cvs diff -u -r 1.4.2.14 -r 1.4.2.15 src/prefs_fonts.c;  cvs diff -u -r 1.1.4.2 -r 1.1.4.3 src/prefs_fonts.h;  cvs diff -u -r 1.10.2.15 -r 1.10.2.16 src/prefs_gtk.c;  cvs diff -u -r 1.5.2.5 -r 1.5.2.6 src/prefs_gtk.h;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/prefs_image_viewer.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/prefs_image_viewer.h;  cvs diff -u -r 1.43.2.30 -r 1.43.2.31 src/prefs_matcher.c;  cvs diff -u -r 1.4.2.2 -r 1.4.2.3 src/prefs_matcher.h;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/prefs_message.c;  cvs diff -u -r 1.1.2.12 -r 1.1.2.13 src/prefs_msg_colors.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/prefs_msg_colors.h;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/prefs_other.c;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/prefs_quote.c;  cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/prefs_receive.c;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/prefs_send.c;  cvs diff -u -r 1.5.2.17 -r 1.5.2.18 src/prefs_spelling.c;  cvs diff -u -r 1.1.4.1 -r 1.1.4.2 src/prefs_spelling.h;  cvs diff -u -r 1.1.2.17 -r 1.1.2.18 src/prefs_summaries.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/prefs_summaries.h;  cvs diff -u -r 1.10.2.11 -r 1.10.2.12 src/prefs_summary_column.c;  cvs diff -u -r 1.1.16.1 -r 1.1.16.2 src/prefs_summary_column.h;  cvs diff -u -r 1.12.2.19 -r 1.12.2.20 src/prefs_template.c;  cvs diff -u -r 1.1.16.1 -r 1.1.16.2 src/prefs_template.h;  cvs diff -u -r 1.3.2.35 -r 1.3.2.36 src/prefs_themes.c;  cvs diff -u -r 1.1.4.2 -r 1.1.4.3 src/prefs_themes.h;  cvs diff -u -r 1.30.2.22 -r 1.30.2.23 src/prefs_toolbar.c;  cvs diff -u -r 1.5.2.1 -r 1.5.2.2 src/prefs_toolbar.h;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/prefs_wrapping.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/prefs_wrapping.h;  cvs diff -u -r 1.10.2.7 -r 1.10.2.8 src/privacy.c;  cvs diff -u -r 1.10.2.6 -r 1.10.2.7 src/privacy.h;  cvs diff -u -r 1.47.2.24 -r 1.47.2.25 src/procheader.c;  cvs diff -u -r 1.11.2.4 -r 1.11.2.5 src/procheader.h;  cvs diff -u -r 1.49.2.69 -r 1.49.2.70 src/procmime.c;  cvs diff -u -r 1.17.2.12 -r 1.17.2.13 src/procmime.h;  cvs diff -u -r 1.150.2.48 -r 1.150.2.49 src/procmsg.c;  cvs diff -u -r 1.60.2.19 -r 1.60.2.20 src/procmsg.h;  cvs diff -u -r 1.8.2.4 -r 1.8.2.5 src/quote_fmt.c;  cvs diff -u -r 1.22.2.17 -r 1.22.2.18 src/quote_fmt_parse.y;  cvs diff -u -r 1.17.2.6 -r 1.17.2.7 src/recv.c;  cvs diff -u -r 1.6.12.1 -r 1.6.12.2 src/recv.h;  cvs diff -u -r 1.1.4.2 -r 1.1.4.3 src/remotefolder.c;  cvs diff -u -r 1.1.4.2 -r 1.1.4.3 src/remotefolder.h;  cvs diff -u -r 1.17.2.25 -r 1.17.2.26 src/send_message.c;  cvs diff -u -r 1.1.4.2 -r 1.1.4.3 src/send_message.h;  cvs diff -u -r 1.5.2.9 -r 1.5.2.10 src/setup.c;  cvs diff -u -r 1.1.1.1.16.2 -r 1.1.1.1.16.3 src/setup.h;  cvs diff -u -r 1.9.2.15 -r 1.9.2.16 src/sourcewindow.c;  cvs diff -u -r 1.1.1.1.16.1 -r 1.1.1.1.16.2 src/sourcewindow.h;  cvs diff -u -r 1.3.2.16 -r 1.3.2.17 src/ssl_manager.c;  cvs diff -u -r 1.2.2.2 -r 1.2.2.3 src/ssl_manager.h;  cvs diff -u -r 1.5.2.7 -r 1.5.2.8 src/statusbar.c;  cvs diff -u -r 1.3.2.3 -r 1.3.2.4 src/statusbar.h;  cvs diff -u -r 1.25.2.19 -r 1.25.2.20 src/stock_pixmap.c;  cvs diff -u -r 1.18.2.13 -r 1.18.2.14 src/stock_pixmap.h;  cvs diff -u -r 1.15.2.18 -r 1.15.2.19 src/summary_search.c;  cvs diff -u -r 1.3.16.1 -r 1.3.16.2 src/summary_search.h;  cvs diff -u -r 1.395.2.154 -r 1.395.2.155 src/summaryview.c;  cvs diff -u -r 1.68.2.13 -r 1.68.2.14 src/summaryview.h;  cvs diff -u -r 1.16.2.2 -r 1.16.2.3 src/syldap.c;  cvs diff -u -r 1.9.2.1 -r 1.9.2.2 src/syldap.h;  cvs diff -u -r 1.96.2.88 -r 1.96.2.89 src/textview.c;  cvs diff -u -r 1.12.2.9 -r 1.12.2.10 src/textview.h;  cvs diff -u -r 1.43.2.35 -r 1.43.2.36 src/toolbar.c;  cvs diff -u -r 1.19.2.7 -r 1.19.2.8 src/toolbar.h;  cvs diff -u -r 1.13.2.5 -r 1.13.2.6 src/undo.c;  cvs diff -u -r 1.5.14.4 -r 1.5.14.5 src/undo.h;  cvs diff -u -r 1.8.2.7 -r 1.8.2.8 src/unmime.c;  cvs diff -u -r 1.2.10.2 -r 1.2.10.3 src/unmime.h;  cvs diff -u -r 1.14.2.5 -r 1.14.2.6 src/vcard.c;  cvs diff -u -r 1.5.12.1 -r 1.5.12.2 src/vcard.h;  cvs diff -u -r 1.1.2.27 -r 1.1.2.28 src/wizard.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/wizard.h;  cvs diff -u -r 1.1.4.3 -r 1.1.4.4 src/common/base64.c;  cvs diff -u -r 1.1.4.2 -r 1.1.4.3 src/common/base64.h;  cvs diff -u -r 1.9.2.20 -r 1.9.2.21 src/common/defs.h;  cvs diff -u -r 1.10.2.2 -r 1.10.2.3 src/common/hooks.c;  cvs diff -u -r 1.6.2.1 -r 1.6.2.2 src/common/hooks.h;  cvs diff -u -r 1.6.2.5 -r 1.6.2.6 src/common/log.c;  cvs diff -u -r 1.4.2.2 -r 1.4.2.3 src/common/log.h;  cvs diff -u -r 1.1.4.2 -r 1.1.4.3 src/common/mgutils.c;  cvs diff -u -r 1.1.4.1 -r 1.1.4.2 src/common/mgutils.h;  cvs diff -u -r 1.6.2.8 -r 1.6.2.9 src/common/nntp.c;  cvs diff -u -r 1.4.2.1 -r 1.4.2.2 src/common/nntp.h;  cvs diff -u -r 1.3.2.3 -r 1.3.2.4 src/common/passcrypt.c;  cvs diff -u -r 1.1.4.1 -r 1.1.4.2 src/common/passcrypt.h.in;  cvs diff -u -r 1.13.2.14 -r 1.13.2.15 src/common/plugin.c;  cvs diff -u -r 1.5.2.3 -r 1.5.2.4 src/common/plugin.h;  cvs diff -u -r 1.5.2.4 -r 1.5.2.5 src/common/prefs.c;  cvs diff -u -r 1.3.2.1 -r 1.3.2.2 src/common/prefs.h;  cvs diff -u -r 1.1.4.1 -r 1.1.4.2 src/common/progressindicator.c;  cvs diff -u -r 1.1.4.1 -r 1.1.4.2 src/common/progressindicator.h;  cvs diff -u -r 1.3.2.4 -r 1.3.2.5 src/common/quoted-printable.c;  cvs diff -u -r 1.3.2.1 -r 1.3.2.2 src/common/quoted-printable.h;  cvs diff -u -r 1.23.2.7 -r 1.23.2.8 src/common/session.c;  cvs diff -u -r 1.8.2.6 -r 1.8.2.7 src/common/session.h;  cvs diff -u -r 1.11.2.15 -r 1.11.2.16 src/common/smtp.c;  cvs diff -u -r 1.6.2.8 -r 1.6.2.9 src/common/smtp.h;  cvs diff -u -r 1.13.2.19 -r 1.13.2.20 src/common/socket.c;  cvs diff -u -r 1.13.2.5 -r 1.13.2.6 src/common/socket.h;  cvs diff -u -r 1.9.2.11 -r 1.9.2.12 src/common/ssl.c;  cvs diff -u -r 1.2.2.2 -r 1.2.2.3 src/common/ssl.h;  cvs diff -u -r 1.4.2.4 -r 1.4.2.5 src/common/ssl_certificate.c;  cvs diff -u -r 1.1.4.2 -r 1.1.4.3 src/common/ssl_certificate.h;  cvs diff -u -r 1.2.2.2 -r 1.2.2.3 src/common/stringtable.c;  cvs diff -u -r 1.1.4.1 -r 1.1.4.2 src/common/stringtable.h;  cvs diff -u -r 1.7.2.6 -r 1.7.2.7 src/common/sylpheed.c;  cvs diff -u -r 1.5.2.2 -r 1.5.2.3 src/common/sylpheed.h;  cvs diff -u -r 1.2.4.14 -r 1.2.4.15 src/common/template.c;  cvs diff -u -r 1.1.4.1 -r 1.1.4.2 src/common/template.h;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/common/timing.h;  cvs diff -u -r 1.36.2.51 -r 1.36.2.52 src/common/utils.c;  cvs diff -u -r 1.20.2.29 -r 1.20.2.30 src/common/utils.h;  cvs diff -u -r 1.3.2.2 -r 1.3.2.3 src/common/version.h.in;  cvs diff -u -r 1.1.4.14 -r 1.1.4.15 src/common/xml.c;  cvs diff -u -r 1.1.4.5 -r 1.1.4.6 src/common/xml.h;  cvs diff -u -r 1.1.4.2 -r 1.1.4.3 src/common/xmlprops.c;  cvs diff -u -r 1.2.2.1 -r 1.2.2.2 src/common/xmlprops.h;  cvs diff -u -r 1.2.2.9 -r 1.2.2.10 src/gtk/colorlabel.c;  cvs diff -u -r 1.1.4.6 -r 1.1.4.7 src/gtk/colorsel.c;  cvs diff -u -r 1.1.4.1 -r 1.1.4.2 src/gtk/colorsel.h;  cvs diff -u -r 1.5.2.15 -r 1.5.2.16 src/gtk/description_window.c;  cvs diff -u -r 1.1.4.2 -r 1.1.4.3 src/gtk/description_window.h;  cvs diff -u -r 1.2.2.19 -r 1.2.2.20 src/gtk/filesel.c;  cvs diff -u -r 1.1.4.6 -r 1.1.4.7 src/gtk/filesel.h;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/gtk/foldersort.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/gtk/foldersort.h;  cvs diff -u -r 1.5.2.18 -r 1.5.2.19 src/gtk/gtkutils.c;  cvs diff -u -r 1.4.2.15 -r 1.4.2.16 src/gtk/gtkutils.h;  cvs diff -u -r 1.2.2.13 -r 1.2.2.14 src/gtk/inputdialog.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/gtk/inputdialog.h;  cvs diff -u -r 1.1.4.13 -r 1.1.4.14 src/gtk/logwindow.c;  cvs diff -u -r 1.1.4.2 -r 1.1.4.3 src/gtk/logwindow.h;  cvs diff -u -r 1.1.4.1 -r 1.1.4.2 src/gtk/manage_window.c;  cvs diff -u -r 1.1.4.2 -r 1.1.4.3 src/gtk/manage_window.h;  cvs diff -u -r 1.5.2.18 -r 1.5.2.19 src/gtk/menu.c;  cvs diff -u -r 1.4.2.7 -r 1.4.2.8 src/gtk/menu.h;  cvs diff -u -r 1.5.2.24 -r 1.5.2.25 src/gtk/pluginwindow.c;  cvs diff -u -r 1.1.4.1 -r 1.1.4.2 src/gtk/pluginwindow.h;  cvs diff -u -r 1.12.2.23 -r 1.12.2.24 src/gtk/prefswindow.c;  cvs diff -u -r 1.7.2.5 -r 1.7.2.6 src/gtk/prefswindow.h;  cvs diff -u -r 1.1.4.15 -r 1.1.4.16 src/gtk/progressdialog.c;  cvs diff -u -r 1.1.4.8 -r 1.1.4.9 src/gtk/progressdialog.h;  cvs diff -u -r 1.9.2.8 -r 1.9.2.9 src/gtk/sslcertwindow.c;  cvs diff -u -r 1.6.2.2 -r 1.6.2.3 src/gtk/sslcertwindow.h;  cvs diff -u -r 1.13.2.19 -r 1.13.2.20 src/plugins/clamav/clamav_plugin.c;  cvs diff -u -r 1.3.2.4 -r 1.3.2.5 src/plugins/clamav/clamav_plugin.h;  cvs diff -u -r 1.9.2.15 -r 1.9.2.16 src/plugins/clamav/clamav_plugin_gtk.c;  cvs diff -u -r 1.13.2.5 -r 1.13.2.6 src/plugins/demo/demo.c;  cvs diff -u -r 1.5.2.10 -r 1.5.2.11 src/plugins/dillo_viewer/dillo_prefs.c;  cvs diff -u -r 1.2.4.1 -r 1.2.4.2 src/plugins/dillo_viewer/dillo_prefs.h;  cvs diff -u -r 1.12.2.10 -r 1.12.2.11 src/plugins/dillo_viewer/dillo_viewer.c;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/plugins/pgpcore/passphrase.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/plugins/pgpcore/passphrase.h;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/plugins/pgpcore/plugin.c;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/plugins/pgpcore/select-keys.c;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/plugins/pgpcore/select-keys.h;  cvs diff -u -r 1.1.2.16 -r 1.1.2.17 src/plugins/pgpcore/sgpgme.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/plugins/pgpcore/sgpgme.h;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/plugins/pgpinline/pgpinline.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/plugins/pgpinline/pgpinline.h;  cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/plugins/pgpinline/plugin.c;  cvs diff -u -r 1.1.2.30 -r 1.1.2.31 src/plugins/pgpmime/pgpmime.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/plugins/pgpmime/pgpmime.h;  cvs diff -u -r 1.1.2.15 -r 1.1.2.16 src/plugins/pgpmime/plugin.c;  cvs diff -u -r 1.18.2.16 -r 1.18.2.17 src/plugins/spamassassin/spamassassin.c;  cvs diff -u -r 1.4.2.5 -r 1.4.2.6 src/plugins/spamassassin/spamassassin.h;  cvs diff -u -r 1.23.2.17 -r 1.23.2.18 src/plugins/spamassassin/spamassassin_gtk.c;  cvs diff -u -r 1.14.2.30 -r 1.14.2.31 src/plugins/trayicon/trayicon.c;  ) > 1.9.100cvs142.patchset
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 manual/account.xml;  ) > 1.9.100cvs143.patchset
+( cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/plugins/pgpinline/pgpinline.c;  ) > 1.9.100cvs144.patchset
