@@ -11,7 +11,7 @@ MINOR_VERSION=9
 MICRO_VERSION=100
 INTERFACE_AGE=0
 BINARY_AGE=0
-EXTRA_VERSION=143
+EXTRA_VERSION=144
 EXTRA_RELEASE=
 EXTRA_GTK2_VERSION=
 
